--- a/TourAgency_/App.config
+++ b/TourAgency_/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-    <add name="DbConnection1" connectionString="Server=.\SQLExpress;Initial Catalog=TourAgency;Integrated Security=true;" />
-    <add name="DbConnection" connectionString="Database=TourAgency;User ID=postgres;Password=1;Host=localhost;Port=5432;" providerName="Npgsql" />
-
+    <add name="DbConnection1" connectionString="Server=.\SQLExpress;Initial Catalog=TourAgency1;Integrated Security=true;" />
+    <add name="DbConnection" connectionString="Database=TourAgency1;User ID=postgres;Password=1;Host=localhost;Port=5432;" providerName="Npgsql" />
+    
 	</connectionStrings>
 </configuration>
