--- a/TourAgency_/App.config
+++ b/TourAgency_/App.config
@@ -1,8 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-	<connectionStrings>
+	<configSections>
+  <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+   <section name="TourAgency_.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+  </sectionGroup>
+ </configSections>
+ <connectionStrings>
     <add name="DbConnection1" connectionString="Server=.\SQLExpress;Initial Catalog=TourAgency1;Integrated Security=true;" />
     <add name="DbConnection" connectionString="Database=TourAgency1;User ID=postgres;Password=1;Host=localhost;Port=5432;" providerName="Npgsql" />
     
 	</connectionStrings>
+ <userSettings>
+  <TourAgency_.Properties.Settings>
+   <setting name="UserName" serializeAs="String">
+    <value />
+   </setting>
+  </TourAgency_.Properties.Settings>
+ </userSettings>
 </configuration>
